@@ -174,7 +174,8 @@ enum gcry_ctl_cmds
     GCRYCTL_INITIALIZATION_FINISHED = 38,
     GCRYCTL_INITIALIZATION_FINISHED_P = 39,
     GCRYCTL_ANY_INITIALIZATION_P = 40,
-    GCRYCTL_SET_CBC_CTS = 41
+    GCRYCTL_SET_CBC_CTS = 41,
+    GCRYCTL_ENABLE_QUICK_RANDOM = 42
   };
 
 /* Perform various operations defined by CMD. */
